--- a/index.html
+++ b/index.html
@@ -7,49 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <p>dklsjdDJWADJIjdıJIdjIOHDıohıohıhofqhıofhıqhqıfe</p>
-    <h1>jdFJŞ</h1>
-    <h2>jehdwj</h2>
-    ```
-    <p>nhhhhşılg</p>
-    <p>jsaDJC</p>
-    <p>akdaos</p>
-    <p>kug</p>
-    <p>seklfkej</p>
-    <p>KLİJFWEJ</p>
-    <p>KDalfkjiJİFİJİJJİLJİİJ</p>
-    <p>KO,,,,,,,,,,,,,,,,,,,,,,,,,,KSAjfikjJİKFAJİDSJİFDLJKSDJGKLJĞRD</p>
-    <p>dslkffffffFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFDD</p>
-    <p>KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK</p>
-    
-    ```
-    <P></P>
-    <P></P>
-    <P></P>
-    <P></P>
-    <P></P>
-    <P></P>
-    <P></P>
-    <P></P>
-    <P></P>
-    <P></P>
+    <h1>Beren Nas Sarıahmet</h1>
+
+    <h2>Hakkımda</h2>
+
+    <p>Merhaba Beren Nas Sarıahmet  10 yaşımdayım Kastamonuda yaşıyorum. Yunus Emre İlkoklunda okuyorum</p>
+
+    <h2>Sevdeğim Dizi ,film ve Şarkılar</h2>
+
+   <p>şimdi onlardüşünsün(dizi) Imagene Drongs: Enemy (şarkı) Kara dul(film) Free Guy(film) ÇGH,Güldür Güldür Dont Look Up(film) </p>
 
 
-    [patika](https://app.patika.dev/)
-
-    <ul>
-        <li>muz</li>
-        <li>çilek</li>
-        <li>karpuz</li>
-        <li>dcnf</li>
-        <li>SAIOdaıĞOIĞIO</li>
-        <li>J</li>
-        <li>UUUU</li>
-        <li>OOOO</li>
-        <li>JKKK</li>
-        <li>KLKKKKKK</li>
-    </ul>
-
-    
 </body>
 </html>
