--- a/kodluyoruzilkrepo/htmlDersleri/proj1/cssödevleri/ödev2css.html
+++ b/kodluyoruzilkrepo/htmlDersleri/proj1/cssödevleri/ödev2css.html
@@ -9,10 +9,13 @@
 <body>
     <img src="https://web.archive.org/web/19990504112211im_/http://www.google.com/google.jpg" alt="resimyok" style="margin-left:600px;">
     <div style="background-color:  #f2f2f2    ;">
-        <p>Search the web using Goggle!</p>
-        <form style=" margin-left:700;">
+        <p style="margin-left: 700px; color: black;">Search the web using Goggle!</p>
+        <form style=" margin-left:700px;">
             <input type="text" >
-        </form>
+        </form> 
+        <br>
+        <button style="margin-left: 650px; border-radius: 5px; border-color: rgb(255, 255, 255);">Goggle Search</button>
+        <button style="margin-left: 770px; border-radius: 5px; border-color: rgb(255, 255, 255); margin-bottom: 0px;">I'm feeling lucky</button>
     </div>
 </body>
 </html>
